LPS-60571 Fixes the size of the fields on DDL Form and DDL Field Settings Modal on mobile devices.

--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/main.scss
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/main.scss
@@ -78,13 +78,29 @@ $horizontal-spacing: 35px;
 		}
 	}
 
-	.icon-spinner {
-		@include animation(spin 1000ms infinite linear);
-	}
-
-	.lfr-ddl-field-settings-save .icon-spinner {
+	.form-builder-field-settings-save .icon-spinner {
 		display: inline-block;
 		margin: -2px 0 0 4px;
+	}
+
+	.form-control {
+		font-size: 14px;
+    	height: 40px;
+	}
+
+	@include sm {
+		.form-control {
+			font-size: 16px;
+		}
+	}
+
+	.help-block {
+		font-size: 14px;
+		position: absolute;
+	}
+
+	.icon-spinner {
+		@include animation(spin 1000ms infinite linear);
 	}
 
 	label.radio-inline {
@@ -94,11 +110,6 @@ $horizontal-spacing: 35px;
 		& + .radio-inline {
 			margin-left: 0;
 		}
-	}
-
-	.help-block {
-		font-size: 14px;
-		position: absolute;
 	}
 
 	.liferay-ddm-form-field-checkbox .toggle-switch-handle .toggle-switch-text {
@@ -758,12 +769,6 @@ $horizontal-spacing: 35px;
 .dynamic-data-mapping-data-providers-modal {
 	max-width: 720px;
 }
-@include md {
-	.lfr-ddl-field-settings-modal.form-builder-field-settings {
-		height: 676px;
-		width: 720px;
-	}
-}
 
 @include sm {
 	.lfr-ddl-field-settings-modal.form-builder-field-settings {
@@ -776,5 +781,12 @@ $horizontal-spacing: 35px;
 		max-height: 550px;
 		padding-top: 85px;
 		width: 500px;
+	}
+}
+
+@include md {
+	.lfr-ddl-field-settings-modal.form-builder-field-settings {
+		height: 676px;
+		width: 720px;
 	}
 }
